--- a/index.html
+++ b/index.html
@@ -8,61 +8,63 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="">Web studio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="site-nav">
+        <a href="" class="logo list">
+          <span class="accent-logo">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="Link">Портфолио</a></li>
+          <li><a href="" class="Link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+380961111111</a></li>
+      <ul class="site-nav list">
+        <li><a href="" class="contacts list">info@devstudio.com</a></li>
+        <li><a href="" class="contacts list">+380961111111</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <!--Решения для бизнеса-->
-        <h1>
+        <h1 class="hero-title">
           Эффективные решения для вашего бизнеса
         </h1>
-        <a href="">Заказать услугу</a>
+        <a href="" class="button-primary">Заказать услугу</a>
       </section>
 
-      <section>
-        <h2>Бизнес</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Бизнес</h2>
+        <ul class="benefits list">
           <li>
             <img src="./images/icon1.svg" alt="" />
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="benefits-title">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <img src="./images/icon2.svg" alt="" />
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="benefits-title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <img src="./images/icon3.svg" alt="" />
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="benefits-title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <img src="./images/icon4.svg" alt="" />
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="benefits-title">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -70,12 +72,12 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="Это ноутбук" width="370" />
-            <h3>Десктопные приложения</h3>
+            <h3 class="works-title">Десктопные приложения</h3>
           </li>
           <li>
             <img
@@ -83,76 +85,140 @@
               alt="Это мобильный телефон"
               width="370"
             />
-            <h3>Мобильные приложения</h3>
+            <h3 class="works-title">Мобильные приложения</h3>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Это монитор" width="370" />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="works-title">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section our-team">
+        <h2 class="section-title">Наша команда</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/img4.jpg" alt="Фото сотрудника" width="270" />
-            <h3>John Smith</h3>
-            <p>Product Designer</p>
+            <h3 class="names">John Smith</h3>
+            <p class="text">Product Designer</p>
 
-            <ul>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="social-links"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="social-links"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="social-links"
+                  >Facebook
+                </a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                  >LinkedIn</a
+                >
+              </li>
             </ul>
           </li>
 
           <li>
             <img src="./images/img5.jpg" alt="Фото сотрудника" width="270" />
-            <h3>Marta Stewart</h3>
-            <p>Frontend Developer</p>
+            <h3 class="names">Marta Stewart</h3>
+            <p class="text">Frontend Developer</p>
 
-            <ul>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="social-links"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="social-links"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="social-links"
+                  >Facebook
+                </a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                  >LinkedIn</a
+                >
+              </li>
             </ul>
           </li>
 
           <li>
             <img src="./images/img6.jpg" alt="Фото сотрудника" width="270" />
-            <h3>Robert Jakis</h3>
-            <p>Marketing</p>
+            <h3 class="names">Robert Jakis</h3>
+            <p class="text">Marketing</p>
 
-            <ul>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="social-links"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="social-links"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="social-links"
+                  >Facebook
+                </a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                  >LinkedIn</a
+                >
+              </li>
             </ul>
           </li>
 
           <li>
             <img src="./images/img7.jpg" alt="Фото сотрудника" width="270" />
-            <h3>Martin Doe</h3>
-            <p>UI Designer</p>
+            <h3 class="names">Martin Doe</h3>
+            <p class="text">UI Designer</p>
 
-            <ul>
-              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-              <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="social-links"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="social-links"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="social-links"
+                  >Facebook
+                </a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                  >LinkedIn</a
+                >
+              </li>
             </ul>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list">
           <li><img src="./images/logo1.svg" alt="" /></li>
           <li><img src="./images/logo2.svg" alt="" /></li>
           <li><img src="./images/logo3.svg" alt="" /></li>
@@ -163,11 +229,13 @@
       </section>
     </main>
 
-    <footer>
-      <a href="">Web studio</a>
-      <adress>г. Киев, пр-т Леси Украинки, 26</adress>
-      <a href="">info@example.com</a>
-      <a href="">+380991111111</a>
+    <footer class="footer">
+      <a href="" class="footer logo-list"
+        ><span class="accent-logo">Web</span>studio</a
+      >
+      <adress class="footer-adress">г. Киев, пр-т Леси Украинки, 26</adress>
+      <a href="" class="footer-contacts">info@example.com</a>
+      <a href="" class="footer-contacts">+380991111111</a>
 
       <b>Присоединяйтесь</b>
 
