--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
@@ -13,7 +17,7 @@
           <span class="accent-logo">Web</span>Studio</a
         >
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="Link">Портфолио</a></li>
           <li><a href="" class="Link">Контакты</a></li>
         </ul>
@@ -31,7 +35,7 @@
         <h1 class="hero-title">
           Эффективные решения для вашего бизнеса
         </h1>
-        <a href="" class="button-primary">Заказать услугу</a>
+        <a href="" class="button primary">Заказать услугу</a>
       </section>
 
       <section class="section">
@@ -230,7 +234,7 @@
     </main>
 
     <footer class="footer">
-      <a href="" class="footer logo-list"
+      <a href="" class="footer-logo list"
         ><span class="accent-logo">Web</span>studio</a
       >
       <adress class="footer-adress">г. Киев, пр-т Леси Украинки, 26</adress>
@@ -245,7 +249,7 @@
         <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
         <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
       </ul>
-      <b>Подпишитесь на рассылку</b>
+      <b class="button primary">Подпишитесь на рассылку</b>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
