Добавила классы для страницы Портфолио, а также оформление цвета и текстаю

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         >
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="Link">Портфолио</a></li>
-          <li><a href="" class="Link">Контакты</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
@@ -124,7 +124,7 @@
                 </a>
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
                   >LinkedIn</a
                 >
               </li>
@@ -153,7 +153,7 @@
                 </a>
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
                   >LinkedIn</a
                 >
               </li>
@@ -182,7 +182,7 @@
                 </a>
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
                   >LinkedIn</a
                 >
               </li>
@@ -211,7 +211,7 @@
                 </a>
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin" class="social-links"
+                <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
                   >LinkedIn</a
                 >
               </li>
@@ -241,15 +241,32 @@
       <a href="" class="footer-contacts">info@example.com</a>
       <a href="" class="footer-contacts">+380991111111</a>
 
-      <b>Присоединяйтесь</b>
-
-      <ul>
-        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-        <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+      <ul class="list">
+        <li><b class="call-to-action">присоединяйтесь</b></li>
+        <li>
+          <a href="" aria-label="Ссылка на Instagram" class="social-links"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Twitter" class="social-links"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Facebook" class="social-links"
+            >Facebook
+          </a>
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
+            >LinkedIn</a
+          >
+        </li>
       </ul>
-      <b class="button primary">Подпишитесь на рассылку</b>
+      <b class="call-to-action">подпишитесь на рассылку</b>
+      <a href="" class="button primary">Подписаться</a>
+
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
