--- a/portfolio.html
+++ b/portfolio.html
@@ -4,43 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="">Web studio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="site-nav">
+        <a href="" class="logo list">
+          <span class="accent-logo">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+380961111111</a></li>
+      <ul class="site-nav list">
+        <li><a href="" class="contacts list">info@devstudio.com</a></li>
+        <li><a href="" class="contacts list">+380961111111</a></li>
       </ul>
     </header>
 
     <main>
       <section>
-        <ul>
-          <li><button>Все</button></li>
-          <li><button>Веб-сайты</button></li>
-          <li><button>Приложения</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+        <ul class="button-portfolio list">
+          <li><button class="button secondary">Все</button></li>
+          <li><button class="button secondary">Веб-сайты</button></li>
+          <li><button class="button secondary">Приложения</button></li>
+          <li><button class="button secondary">Дизайн</button></li>
+          <li><button class="button secondary">Маркетинг</button></li>
         </ul>
       </section>
       <section>
-        <h1>Наши проекты</h1>
+        <h1 class="section-title">Наши проекты</h1>
         <ul>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img8.jpg" alt="" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title-portfolio">Технокряк</h2>
+              <p class="text-portfolio">Веб-сайт</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -48,11 +55,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img9.jpg" alt="" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="title-portfolio">Постер New Orlean vs Golden Star</h2>
+              <p class="text-portfolio">Дизайн</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -60,11 +67,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img10.jpg" alt="" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="title-portfolio">Ресторан Seafood</h2>
+              <p class="text-portfolio">Приложение</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -72,11 +79,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img11.jpg" alt="" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="title-portfolio">Проект Prime</h2>
+              <p class="text-portfolio">Маркетинг</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -84,11 +91,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img12.jpg" alt="" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="title-portfolio">Проект Boxes</h2>
+              <p class="text-portfolio">Приложение</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -96,11 +103,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img13.jpg" alt="" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title-portfolio">Inspiration has no Borders</h2>
+              <p class="text-portfolio">Веб-сайт</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -108,11 +115,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img14.jpg" alt="" />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="title-portfolio">Издание Limited Edition</h2>
+              <p class="text-portfolio">Дизайн</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -120,11 +127,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img15.jpg" alt="" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="title-portfolio">Проект LAB</h2>
+              <p class="text-portfolio">Маркетинг</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -132,11 +139,11 @@
               </p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list example">
+            <a href="" class="link list">
               <img src="./images/img16.jpg" alt="" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="title-portfolio">Growing Business</h2>
+              <p class="text-portfolio">Приложение</p>
               <p>
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -148,21 +155,39 @@
       </section>
     </main>
 
-    <footer>
-      <a href="">Web studio</a>
-      <adress>г. Киев, пр-т Леси Украинки, 26</adress>
-      <a href="">info@example.com</a>
-      <a href="">+380991111111</a>
+    <footer class="footer">
+      <a href="" class="footer-logo list">
+        <span class="accent-logo">Web</span>Studio</a
+      >
+      <adress class="footer-adress">г. Киев, пр-т Леси Украинки, 26</adress>
+      <a href="" class="footer-contacts">info@example.com</a>
+      <a href="" class="footer-contacts">+380991111111</a>
 
-      <b>Присоединяйтесь</b>
-
-      <ul>
-        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Ссылка на Facebook">Facebook </a></li>
-        <li><a href="" aria-label="Ссылка на Linkedin">LinkedIn</a></li>
+      <ul class="list">
+        <li><b class="call-to-action">присоединяйтесь</b></li>
+        <li>
+          <a href="" aria-label="Ссылка на Instagram" class="social-links"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Twitter" class="social-links"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Facebook" class="social-links"
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на LinkedIn" class="social-links"
+            >LinkedIn</a
+          >
+        </li>
       </ul>
-      <b>Подпишитесь на рассылку</b>
+      <b class="call-to-action">Подпишитесь на рассылку</b>
+      <a href="" class="button primary">Подписаться</a>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
