--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <h1 class="section-title">Наши проекты</h1>
         <ul>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img8.jpg" alt="" />
               <h2 class="title-portfolio">Технокряк</h2>
               <p class="text-portfolio">Веб-сайт</p>
@@ -56,7 +56,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img9.jpg" alt="" />
               <h2 class="title-portfolio">Постер New Orlean vs Golden Star</h2>
               <p class="text-portfolio">Дизайн</p>
@@ -68,7 +68,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img10.jpg" alt="" />
               <h2 class="title-portfolio">Ресторан Seafood</h2>
               <p class="text-portfolio">Приложение</p>
@@ -80,7 +80,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img11.jpg" alt="" />
               <h2 class="title-portfolio">Проект Prime</h2>
               <p class="text-portfolio">Маркетинг</p>
@@ -92,7 +92,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img12.jpg" alt="" />
               <h2 class="title-portfolio">Проект Boxes</h2>
               <p class="text-portfolio">Приложение</p>
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img13.jpg" alt="" />
               <h2 class="title-portfolio">Inspiration has no Borders</h2>
               <p class="text-portfolio">Веб-сайт</p>
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img14.jpg" alt="" />
               <h2 class="title-portfolio">Издание Limited Edition</h2>
               <p class="text-portfolio">Дизайн</p>
@@ -128,7 +128,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img15.jpg" alt="" />
               <h2 class="title-portfolio">Проект LAB</h2>
               <p class="text-portfolio">Маркетинг</p>
@@ -140,7 +140,7 @@
             </a>
           </li>
           <li class="list example">
-            <a href="" class="link list">
+            <a href="" class="link">
               <img src="./images/img16.jpg" alt="" />
               <h2 class="title-portfolio">Growing Business</h2>
               <p class="text-portfolio">Приложение</p>
